add grpc test
